--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,10 @@ img {
 }    
 
 .header-button {
+        border: 1px solid var(--accent-color);
+        border-radius: 25px;
+        padding: 12px 20px;
+        min-width: 120px;
         font-family: inherit;
         font-weight: 600;
         font-size: 12px;
@@ -110,6 +114,7 @@ img {
         letter-spacing: 0.09em;
         text-transform: uppercase;
         color: var(--header-text-color);
+        background-color: black;
         cursor: pointer;
 }
 
@@ -203,6 +208,10 @@ img {
 }
 
 .about-button {
+    border: 1px solid var(--accent-color);
+    border-radius: 25px;
+    padding: 12px 20px;
+    min-width: 120px;
     font-family: inherit;
     font-weight: 600;
     font-size: 12px;
@@ -210,6 +219,7 @@ img {
     letter-spacing: 0.09em;
     text-transform: uppercase;
     color: var(--main-text-color);
+    background-color: var(--main-background-color);
     cursor: pointer;
 }
 
@@ -258,6 +268,11 @@ img {
 }
 
 .price-button {
+    /* display: inline-block; */
+    border: 1px solid var(--accent-color);
+    border-radius: 25px;
+    padding: 12px 20px;
+    min-width: 120px;
     font-family: inherit;
     font-weight: 600;
     font-size: 12px;
@@ -265,6 +280,7 @@ img {
     letter-spacing: 0.09em;
     text-transform: uppercase;
     color: var(--main-text-color);
+    background-color: var(--main-background-color);
     cursor: pointer;
 }
 
